Chore: "like 어노테이션 재배치"